[gd_scene load_steps=9 format=4 uid="uid://co0esc44sys74"]

[ext_resource type="Texture2D" uid="uid://c1mi0d78lbjlx" path="res://scenes/tetrominoes.png" id="1_6k4f3"]
[ext_resource type="Script" uid="uid://bn8eunvm6g2ac" path="res://assets/tile_map_layer.gd" id="1_a28a1"]
[ext_resource type="Script" uid="uid://dgg5hg8url8tc" path="res://assets/NetworkManager.gd" id="1_dpo1k"]
[ext_resource type="Script" uid="uid://co2jlrippl4u7" path="res://assets/player_2.gd" id="4_q5r2s"]

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_dpo1k"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_dpo1k"]
texture = ExtResource("1_6k4f3")
texture_region_size = Vector2i(32, 32)
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_6k4f3"]
texture = ExtResource("1_6k4f3")
texture_region_size = Vector2i(32, 32)
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0

[sub_resource type="TileSet" id="TileSet_6k4f3"]
tile_size = Vector2i(32, 32)
physics_layer_0/collision_layer = 1
sources/1 = SubResource("TileSetAtlasSource_6k4f3")
sources/0 = SubResource("TileSetAtlasSource_dpo1k")

[node name="NetworkManager" type="Node"]
script = ExtResource("1_dpo1k")

[node name="Player1" type="TileMapLayer" parent="."]
material = SubResource("CanvasItemMaterial_dpo1k")
position = Vector2(-5176, -10153)
scale = Vector2(32, 32)
tile_map_data = PackedByteArray("AAD/////AQAHAAAAAAD//wAAAQAHAAAAAAD//wEAAQAHAAAAAAD//wIAAQAHAAAAAAD//wMAAQAHAAAAAAD//wQAAQAHAAAAAAD//wUAAQAHAAAAAAD//wYAAQAHAAAAAAD//wcAAQAHAAAAAAD//wgAAQAHAAAAAAD//wkAAQAHAAAAAAD//woAAQAHAAAAAAD//wsAAQAHAAAAAAD//wwAAQAHAAAAAAD//w0AAQAHAAAAAAD//w4AAQAHAAAAAAD//w8AAQAHAAAAAAD//xAAAQAHAAAAAAD//xEAAQAHAAAAAAD//xIAAQAHAAAAAAD//xMAAQAHAAAAAAD//xQAAQAHAAAAAAAAABQAAQAHAAAAAAABABQAAQAHAAAAAAACABQAAQAHAAAAAAADABQAAQAHAAAAAAAEABQAAQAHAAAAAAAFABQAAQAHAAAAAAAGABQAAQAHAAAAAAAHABQAAQAHAAAAAAAIABQAAQAHAAAAAAAJABQAAQAHAAAAAAAKABQAAQAHAAAAAAAKABMAAQAHAAAAAAAKABIAAQAHAAAAAAAKABEAAQAHAAAAAAAKABAAAQAHAAAAAAAKAA8AAQAHAAAAAAAKAA4AAQAHAAAAAAAKAA0AAQAHAAAAAAAKAAwAAQAHAAAAAAAKAAsAAQAHAAAAAAAKAAoAAQAHAAAAAAAKAAkAAQAHAAAAAAAKAAgAAQAHAAAAAAAKAAcAAQAHAAAAAAAKAAYAAQAHAAAAAAAKAAUAAQAHAAAAAAAKAAQAAAAHAAAAAAAKAAMAAQAHAAAAAAAKAAIAAQAHAAAAAAAKAAEAAQAHAAAAAAAKAAAAAQAHAAAAAAAKAP//AQAHAAAAAAALAP//AAAHAAAAAAAMAP//AAAHAAAAAAANAP//AAAHAAAAAAAOAP//AAAHAAAAAAAPAP//AAAHAAAAAAAQAP//AAAHAAAAAAARAP//AAAHAAAAAAARAAAAAAAHAAAAAAARAAEAAAAHAAAAAAARAAIAAAAHAAAAAAARAAMAAAAHAAAAAAARAAQAAAAHAAAAAAARAAUAAAAHAAAAAAARAAYAAAAHAAAAAAARAAcAAAAHAAAAAAARAAgAAAAHAAAAAAARAAkAAAAHAAAAAAARAAoAAAAHAAAAAAARAAsAAAAHAAAAAAARAAwAAAAHAAAAAAARAA0AAAAHAAAAAAARAA4AAAAHAAAAAAARAA8AAAAHAAAAAAARABAAAAAHAAAAAAARABEAAAAHAAAAAAARABIAAAAHAAAAAAARABMAAAAHAAAAAAARABQAAAAHAAAAAAALABQAAAAHAAAAAAAMABQAAAAHAAAAAAANABQAAAAHAAAAAAAOABQAAAAHAAAAAAAPABQAAAAHAAAAAAAQABQAAAAHAAAAAAALAAQAAAAHAAAAAAAMAAQAAAAHAAAAAAANAAQAAAAHAAAAAAAOAAQAAAAHAAAAAAAPAAQAAAAHAAAAAAAQAAQAAAAHAAAAAAAdABQAAQAHAAAAAAAeABQAAQAHAAAAAAAfABQAAQAHAAAAAAAgABQAAAAHAAAAAAAhABQAAAAHAAAAAAAiABQAAAAHAAAAAAAjABQAAAAHAAAAAAAkABQAAAAHAAAAAAAlABQAAAAHAAAAAAAmABQAAAAHAAAAAAAUAP//AQAHAAAAAAAUAAAAAQAHAAAAAAAUAAEAAQAHAAAAAAAUAAIAAQAHAAAAAAAUAAMAAQAHAAAAAAAUAAQAAQAHAAAAAAAUAAUAAQAHAAAAAAAUAAYAAQAHAAAAAAAUAAcAAQAHAAAAAAAUAAgAAQAHAAAAAAAUAAkAAQAHAAAAAAAUAAoAAQAHAAAAAAAUAAsAAQAHAAAAAAAUAAwAAQAHAAAAAAAUAA0AAQAHAAAAAAAUAA4AAQAHAAAAAAAUAA8AAQAHAAAAAAAUABAAAQAHAAAAAAAUABEAAQAHAAAAAAAUABIAAQAHAAAAAAAUABMAAQAHAAAAAAAUABQAAQAHAAAAAAAVABQAAQAHAAAAAAAWABQAAQAHAAAAAAAXABQAAQAHAAAAAAAYABQAAQAHAAAAAAAZABQAAQAHAAAAAAAaABQAAQAHAAAAAAAbABQAAQAHAAAAAAAcABQAAQAHAAAAAAAfAP//AQAHAAAAAAAfAAAAAQAHAAAAAAAfAAEAAQAHAAAAAAAfAAIAAQAHAAAAAAAfAAMAAQAHAAAAAAAfAAQAAAAHAAAAAAAfAAUAAQAHAAAAAAAfAAYAAQAHAAAAAAAfAAcAAQAHAAAAAAAfAAgAAQAHAAAAAAAfAAkAAQAHAAAAAAAfAAoAAQAHAAAAAAAfAAsAAQAHAAAAAAAfAAwAAQAHAAAAAAAfAA0AAQAHAAAAAAAfAA4AAQAHAAAAAAAfAA8AAQAHAAAAAAAfABAAAQAHAAAAAAAfABEAAQAHAAAAAAAfABIAAQAHAAAAAAAfABMAAQAHAAAAAAAgAP//AAAHAAAAAAAgAAQAAAAHAAAAAAAhAP//AAAHAAAAAAAhAAQAAAAHAAAAAAAiAP//AAAHAAAAAAAiAAQAAAAHAAAAAAAjAP//AAAHAAAAAAAjAAQAAAAHAAAAAAAkAP//AAAHAAAAAAAkAAQAAAAHAAAAAAAlAP//AAAHAAAAAAAlAAQAAAAHAAAAAAAmAP//AAAHAAAAAAAmAAAAAAAHAAAAAAAmAAEAAAAHAAAAAAAmAAIAAAAHAAAAAAAmAAMAAAAHAAAAAAAmAAQAAAAHAAAAAAAmAAUAAAAHAAAAAAAmAAYAAAAHAAAAAAAmAAcAAAAHAAAAAAAmAAgAAAAHAAAAAAAmAAkAAAAHAAAAAAAmAAoAAAAHAAAAAAAmAAsAAAAHAAAAAAAmAAwAAAAHAAAAAAAmAA0AAAAHAAAAAAAmAA4AAAAHAAAAAAAmAA8AAAAHAAAAAAAmABAAAAAHAAAAAAAmABEAAAAHAAAAAAAmABIAAAAHAAAAAAAmABMAAAAHAAAAAAA=")
tile_set = SubResource("TileSet_6k4f3")
rendering_quadrant_size = 32
collision_visibility_mode = 1
physics_quadrant_size = 32
navigation_enabled = false
script = ExtResource("1_a28a1")

[node name="Player2" type="TileMapLayer" parent="."]
material = SubResource("CanvasItemMaterial_dpo1k")
position = Vector2(-5176, -10153)
scale = Vector2(32, 32)
tile_map_data = PackedByteArray("AAD/////AQAHAAAAAAD//wAAAQAHAAAAAAD//wEAAQAHAAAAAAD//wIAAQAHAAAAAAD//wMAAQAHAAAAAAD//wQAAQAHAAAAAAD//wUAAQAHAAAAAAD//wYAAQAHAAAAAAD//wcAAQAHAAAAAAD//wgAAQAHAAAAAAD//wkAAQAHAAAAAAD//woAAQAHAAAAAAD//wsAAQAHAAAAAAD//wwAAQAHAAAAAAD//w0AAQAHAAAAAAD//w4AAQAHAAAAAAD//w8AAQAHAAAAAAD//xAAAQAHAAAAAAD//xEAAQAHAAAAAAD//xIAAQAHAAAAAAD//xMAAQAHAAAAAAD//xQAAQAHAAAAAAAAABQAAQAHAAAAAAABABQAAQAHAAAAAAACABQAAQAHAAAAAAADABQAAQAHAAAAAAAEABQAAQAHAAAAAAAFABQAAQAHAAAAAAAGABQAAQAHAAAAAAAHABQAAQAHAAAAAAAIABQAAQAHAAAAAAAJABQAAQAHAAAAAAAKABQAAQAHAAAAAAAKABMAAQAHAAAAAAAKABIAAQAHAAAAAAAKABEAAQAHAAAAAAAKABAAAQAHAAAAAAAKAA8AAQAHAAAAAAAKAA4AAQAHAAAAAAAKAA0AAQAHAAAAAAAKAAwAAQAHAAAAAAAKAAsAAQAHAAAAAAAKAAoAAQAHAAAAAAAKAAkAAQAHAAAAAAAKAAgAAQAHAAAAAAAKAAcAAQAHAAAAAAAKAAYAAQAHAAAAAAAKAAUAAQAHAAAAAAAKAAQAAAAHAAAAAAAKAAMAAQAHAAAAAAAKAAIAAQAHAAAAAAAKAAEAAQAHAAAAAAAKAAAAAQAHAAAAAAAKAP//AQAHAAAAAAALAP//AAAHAAAAAAAMAP//AAAHAAAAAAANAP//AAAHAAAAAAAOAP//AAAHAAAAAAAPAP//AAAHAAAAAAAQAP//AAAHAAAAAAARAP//AAAHAAAAAAARAAAAAAAHAAAAAAARAAEAAAAHAAAAAAARAAIAAAAHAAAAAAARAAMAAAAHAAAAAAARAAQAAAAHAAAAAAARAAUAAAAHAAAAAAARAAYAAAAHAAAAAAARAAcAAAAHAAAAAAARAAgAAAAHAAAAAAARAAkAAAAHAAAAAAARAAoAAAAHAAAAAAARAAsAAAAHAAAAAAARAAwAAAAHAAAAAAARAA0AAAAHAAAAAAARAA4AAAAHAAAAAAARAA8AAAAHAAAAAAARABAAAAAHAAAAAAARABEAAAAHAAAAAAARABIAAAAHAAAAAAARABMAAAAHAAAAAAARABQAAAAHAAAAAAALABQAAAAHAAAAAAAMABQAAAAHAAAAAAANABQAAAAHAAAAAAAOABQAAAAHAAAAAAAPABQAAAAHAAAAAAAQABQAAAAHAAAAAAALAAQAAAAHAAAAAAAMAAQAAAAHAAAAAAANAAQAAAAHAAAAAAAOAAQAAAAHAAAAAAAPAAQAAAAHAAAAAAAQAAQAAAAHAAAAAAAdABQAAQAHAAAAAAAeABQAAQAHAAAAAAAfABQAAQAHAAAAAAAgABQAAAAHAAAAAAAhABQAAAAHAAAAAAAiABQAAAAHAAAAAAAjABQAAAAHAAAAAAAkABQAAAAHAAAAAAAlABQAAAAHAAAAAAAmABQAAAAHAAAAAAAUAP//AQAHAAAAAAAUAAAAAQAHAAAAAAAUAAEAAQAHAAAAAAAUAAIAAQAHAAAAAAAUAAMAAQAHAAAAAAAUAAQAAQAHAAAAAAAUAAUAAQAHAAAAAAAUAAYAAQAHAAAAAAAUAAcAAQAHAAAAAAAUAAgAAQAHAAAAAAAUAAkAAQAHAAAAAAAUAAoAAQAHAAAAAAAUAAsAAQAHAAAAAAAUAAwAAQAHAAAAAAAUAA0AAQAHAAAAAAAUAA4AAQAHAAAAAAAUAA8AAQAHAAAAAAAUABAAAQAHAAAAAAAUABEAAQAHAAAAAAAUABIAAQAHAAAAAAAUABMAAQAHAAAAAAAUABQAAQAHAAAAAAAVABQAAQAHAAAAAAAWABQAAQAHAAAAAAAXABQAAQAHAAAAAAAYABQAAQAHAAAAAAAZABQAAQAHAAAAAAAaABQAAQAHAAAAAAAbABQAAQAHAAAAAAAcABQAAQAHAAAAAAAfAP//AQAHAAAAAAAfAAAAAQAHAAAAAAAfAAEAAQAHAAAAAAAfAAIAAQAHAAAAAAAfAAMAAQAHAAAAAAAfAAQAAAAHAAAAAAAfAAUAAQAHAAAAAAAfAAYAAQAHAAAAAAAfAAcAAQAHAAAAAAAfAAgAAQAHAAAAAAAfAAkAAQAHAAAAAAAfAAoAAQAHAAAAAAAfAAsAAQAHAAAAAAAfAAwAAQAHAAAAAAAfAA0AAQAHAAAAAAAfAA4AAQAHAAAAAAAfAA8AAQAHAAAAAAAfABAAAQAHAAAAAAAfABEAAQAHAAAAAAAfABIAAQAHAAAAAAAfABMAAQAHAAAAAAAgAP//AAAHAAAAAAAgAAQAAAAHAAAAAAAhAP//AAAHAAAAAAAhAAQAAAAHAAAAAAAiAP//AAAHAAAAAAAiAAQAAAAHAAAAAAAjAP//AAAHAAAAAAAjAAQAAAAHAAAAAAAkAP//AAAHAAAAAAAkAAQAAAAHAAAAAAAlAP//AAAHAAAAAAAlAAQAAAAHAAAAAAAmAP//AAAHAAAAAAAmAAAAAAAHAAAAAAAmAAEAAAAHAAAAAAAmAAIAAAAHAAAAAAAmAAMAAAAHAAAAAAAmAAQAAAAHAAAAAAAmAAUAAAAHAAAAAAAmAAYAAAAHAAAAAAAmAAcAAAAHAAAAAAAmAAgAAAAHAAAAAAAmAAkAAAAHAAAAAAAmAAoAAAAHAAAAAAAmAAsAAAAHAAAAAAAmAAwAAAAHAAAAAAAmAA0AAAAHAAAAAAAmAA4AAAAHAAAAAAAmAA8AAAAHAAAAAAAmABAAAAAHAAAAAAAmABEAAAAHAAAAAAAmABIAAAAHAAAAAAAmABMAAAAHAAAAAAA=")
tile_set = SubResource("TileSet_6k4f3")
rendering_quadrant_size = 32
collision_visibility_mode = 1
physics_quadrant_size = 32
navigation_enabled = false
script = ExtResource("4_q5r2s")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(14217, 602)
zoom = Vector2(0.023, 0.023)

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="UI" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HostButton" type="Button" parent="CanvasLayer/UI"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -7.0
offset_top = -361.0
offset_right = 506.0
offset_bottom = 358.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 100
text = "Host"

[node name="JoinButton" type="Button" parent="CanvasLayer/UI"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -553.0
offset_top = -372.0
offset_right = -6.5
offset_bottom = 346.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 100
text = "Join"
